Persist feature request voting
